# CFF-InspiredFrameRateDegradationRL

./: .gitignore  README.md  pyproject.toml  scitas_tutorial.md  setup_env_izar.sh  submit_eval.sh  submit_eval_multiple.sh  submit_job.sh  submit_job_array.sh  submit_job_epvideo.sh  submit_job_eval.sh  submit_job_heatmap.sh  submit_job_multiple_configs.sh
configs/: agent_a_fourrooms.yaml  agent_a_fourrooms_lstm.yaml  agent_a_fourrooms_lstm_k4.yaml  agent_a_fourrooms_lstm_proprio.yaml  agent_a_fourrooms_lstm_proprio_turn45.yaml  agent_a_fourrooms_lstm_seed43.yaml  agent_a_fourrooms_lstm_seed44.yaml  agent_a_fourrooms_lstm_turn10.yaml  agent_a_fourrooms_lstm_turn45.yaml  agent_a_fourroomshard_dynamic_lstm_proprio_turn45.yaml  agent_a_fourroomshard_v2_lstm_proprio_turn10.yaml  agent_a_fourroomshard_v2_lstm_proprio_turn10_3M.yaml  agent_a_fourroomshard_v2_lstm_proprio_turn45.yaml  agent_a_static.yaml  agent_b_fourrooms.yaml  agent_b_fourrooms_lstm.yaml  agent_b_fourrooms_lstm_proprio.yaml  agent_b_fourrooms_lstm_turn10.yaml  agent_b_fourrooms_lstm_turn10_proprio.yaml  agent_b_fourroomshard_dynamic_4d_lstm_proprio_turn10.yaml  agent_b_fourroomshard_dynamic_4d_lstm_proprio_turn10_6M_dr005.yaml  agent_b_fourroomshard_v2_lstm_proprio_turn10.yaml  agent_b_fourroomshard_v2_lstm_proprio_turn10_k_11.yaml  agent_b_fourroomshard_v2_lstm_proprio_turn10_k_3.yaml  agent_b_fourroomshard_v2_lstm_proprio_turn10_k_5.yaml  agent_b_fourroomshard_v2_lstm_proprio_turn10_k_9.yaml  agent_b_fourroomshard_v2_lstm_proprio_turn45.yaml  agent_c2_fourrooms_lstm_turn10.yaml  (+12 more)
scripts/: eval.py  train.py  (+7 more)
(+63 files in other folders)
